Move versions to separate class, generator module message, add test case