@@ -23,7 +23,6 @@ import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
-import java.util.function.Supplier;
 
 import jakarta.json.JsonArray;
 import jakarta.json.JsonObject;
@@ -31,12 +30,6 @@ import jakarta.json.stream.JsonParser;
 import jakarta.json.stream.JsonParserFactory;
 
 class YamlParserFactory implements JsonParserFactory, SettingsBuilder {
-
-    private static final String MOD_SNAKEYAML = "org.yaml.snakeyaml";
-    private static final String MOD_SNAKEYAML_ENGINE = "org.snakeyaml.engine";
-    private static final String MISSING_MODULE_MESSAGE = "Required module not found: %s. "
-            + "Ensure module is present on module path. Add to application module-info or "
-            + "include with --add-modules command line option.";
 
     private final Map<String, ?> properties;
     private final boolean useSnakeYamlEngine;
@@ -46,7 +39,7 @@ class YamlParserFactory implements JsonParserFactory, SettingsBuilder {
         this.properties = properties;
 
         Object version = properties.get(Yaml.Settings.YAML_VERSION);
-        useSnakeYamlEngine = Yaml.Settings.YAML_VERSION_1_2.equals(version);
+        useSnakeYamlEngine = Yaml.Versions.V1_2.equals(version);
 
         if (useSnakeYamlEngine) {
             snakeYamlProvider = loadProvider(() -> new org.snakeyaml.engine.v2.api.lowlevel.Parse(buildLoadSettings(properties)),
@@ -57,15 +50,7 @@ class YamlParserFactory implements JsonParserFactory, SettingsBuilder {
         }
     }
 
-    Object loadProvider(Supplier<Object> providerSupplier, String providerModule) {
-        try {
-            return providerSupplier.get();
-        } catch (Exception | NoClassDefFoundError e) {
-            throw new IllegalStateException(String.format(MISSING_MODULE_MESSAGE, providerModule), e);
-        }
-    }
-
-    YamlParser<?, ?> createYamlParser(Reader reader) { // NOSONAR
+    YamlParser<?, ?> createYamlParser(Reader reader) { // NOSONAR - ignore use of wildcards
         if (useSnakeYamlEngine) {
             var provider = (org.snakeyaml.engine.v2.api.lowlevel.Parse) snakeYamlProvider;
             return new SnakeYamlEngineParser(provider.parseReader(reader).iterator(), reader);
